output_results/ScientificPython/iteration_13/model_response.txt
The critical new issue is:

```
File "/app/repo_to_process/Scientific/Geometry/VectorModule.py", line 65
  return 'Vector(%s,%s,%s)' % (`self.array[0]`,\
                               ^
SyntaxError: invalid syntax
```

The usage of backticks (`` ` ``) for string conversion is Python 2 syntax (equivalent to `repr()` in Python 3).  
To fix: replace all backtick usages with `repr()` in `Scientific/Geometry/VectorModule.py`.

---

```file:Scientific/Geometry/VectorModule.py
# ... (content from lines 1-64 remains unchanged)

    def __repr__(self):
        return 'Vector(%s,%s,%s)' % (repr(self.array[0]), repr(self.array[1]), repr(self.array[2]))
```

Now, rerun pytest for test collection.

```bash
PYTHONPATH=. pytest
```
